--- a/fig.yml
+++ b/fig.yml
@@ -1,15 +1,7 @@
 web:
   build: web
+  ports:
+    - 80:1337
   volumes:
     - web:/usr/src/app
-  command: gunicorn -w 4 -b 0.0.0.0:1337 app:app
-
-nginx:
-  image: nginx:latest
-  ports:
-    - 80:80
-    - 443:443
-  links:
-    - web:web
-  volumes:
-    - nginx.conf:/etc/nginx/nginx.conf:ro
+  command: python app.py
