Update for Python 3.5 and new docker-compose

--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -12,4 +12,4 @@ nginx:
   links:
     - web:web
   volumes:
-    - nginx.conf:/etc/nginx/nginx.conf:ro
+    - ./nginx.conf:/etc/nginx/nginx.conf:ro
