--- a/nginx.conf
+++ b/nginx.conf
@@ -56,14 +56,14 @@ http {
   # Listen to all request of port 80. Redirect to https protocol.
   # server {
   #   listen 0.0.0.0:80;
-  #   server_name beatobongco.com *.beatobongco.com;
+  #   server_name test.com *.test.com;
   #   rewrite ^(.*) https://$host$1 permanent;
   # }
 
   server {
      listen 80;
 
-     server_name www-dev.beatobongco.com;
+     server_name www-dev.test.com;
 
      access_log  /var/log/nginx/access.log;
      error_log  /var/log/nginx/error.log;
